--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   http: ^0.13.5
   url_launcher: ^6.2.5
+  fl_chart: ^0.63.0
+  shared_preferences: ^2.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -55,6 +57,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/images/clock.png
+    - assets/images/tradepulse_logo.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
