--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   url_launcher: ^6.2.5
   fl_chart: ^0.63.0
   shared_preferences: ^2.2.2
+  share_plus: ^7.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -58,6 +59,8 @@ flutter:
   assets:
     - assets/images/clock.png
     - assets/images/tradepulse_logo.png
+    - assets/images/
+    - assets/images/gift.jpg
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
